test-cases/final-dump/unique_member.exp
Error detected during uniqueness checking of module(s) unique_member, unique_member.ty
[91mfinal-dump/unique_member.wybe:3:15: Unique constructor argument uniq of non-unique type
[0m
